--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,17 @@
 .Container {
-    display: contents;
     position: relative;
+    background-color: azure;
+
 }
 
 .body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 2em 0;
+
     position: absolute;
     left: 15rem;
     top: 3.1rem;
-    width: 100%;
-    height: auto;
-}
+    }
