style: Melhorando CSS das paginas

--- a/src/components/pages/taskform/TaskForm.module.css
+++ b/src/components/pages/taskform/TaskForm.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     
     flex-direction: column;
-    gap: 24px;
+    gap: 32px;
     width: 60%;
     padding: 2rem;
     border-radius: 10px;
@@ -16,11 +16,13 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 4px;
 }
 
-.nivel {
-    width: 3rem;
+.erro {
+    font-weight: 500;
+    color: red;
 }
 
 .dual {
@@ -35,14 +37,80 @@
     flex-direction: column;
 }
 
-.formSubmit {
-    background: #0066A2;
-    color: white;
-    border-style: outset;
-    border-color: #0066A2;
-    border-radius: 5px;
-    height: 50px;
-    width: 100px;
-    font: bold15px arial,sans-serif;
-    text-shadow: none;
+.topContainer {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
 }
+
+.inputForm input, .nivel select, .status select {
+    max-width: 190px;
+    height: 44px;
+    background-color: #E8F0FE;
+    border-radius: .5rem;
+    padding: 0 1rem;
+    border: 2px solid transparent;
+    font-size: 1rem;
+    transition: border-color .3s cubic-bezier(.25,.01,.25,1) 0s, color .3s cubic-bezier(.25,.01,.25,1) 0s,background .2s cubic-bezier(.25,.01,.25,1) 0s;
+  }
+
+  .inputForm textarea {
+    background-color: #E8F0FE;
+    border-radius: .5rem;
+    padding: 0 1rem;
+    max-width: 900px;
+    border: 2px solid transparent;
+    font-size: 1rem;
+    transition: border-color .3s cubic-bezier(.25,.01,.25,1) 0s, color .3s cubic-bezier(.25,.01,.25,1) 0s,background .2s cubic-bezier(.25,.01,.25,1) 0s;
+  }
+  
+  .inputForm label {
+    display: block;
+    margin-bottom: .3rem;
+    font-size: .9rem;
+    font-weight: bold;
+    color: #05060f99;
+    transition: color .3s cubic-bezier(.25,.01,.25,1) 0s;
+  }
+  
+  .inputForm input:hover, .input:focus, .input-group:hover .input {
+    outline: none;
+    border-color: #05060f;
+  }
+  
+  .inputForm input-group:hover .label, .input:focus {
+    color: #05060fc2;
+  }
+
+  .formSubmit {
+    --font-color: #323232;
+    --bg-color: #fff;
+    --main-color: #323232;
+    width: 120px;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid var(--main-color);
+    background-color: var(--bg-color);
+    box-shadow: 4px 4px var(--main-color);
+    font-size: 17px;
+    font-weight: 600;
+    color: var(--font-color);
+    cursor: pointer;
+  }
+
+  .formSubmit:active {
+    box-shadow: 0px 0px var(--main-color);
+    transform: translate(3px, 3px);
+  }
+
+  @media (max-width: 1022px) {
+    .inputForm textarea {
+      max-width: 300px;
+    }
+  }
+
+  @media (max-width: 650px) {
+    .inputForm textarea {
+      max-width: 150px;
+    }
+  }
