fix: css sidebar and header

--- a/src/pages/cadEmpresa/cadEmpresa.module.css
+++ b/src/pages/cadEmpresa/cadEmpresa.module.css
@@ -1,3 +1,13 @@
+.containerMain {
+  display: flex;
+}
+
+.containerSection {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
 .Container dialog {
   background-color: #5ee2e7;
 }
@@ -9,7 +19,7 @@
 .head button {
   position: absolute;
   left: 75rem;
-  top: -10rem;
+  top: 2rem;
 }
 
 .containerForm, .containerForm div {
