--- a/src/pages/tasks/GetTask.module.css
+++ b/src/pages/tasks/GetTask.module.css
@@ -3,6 +3,11 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
+
+.main {
+    display: flex;
+}
+
 body{
     font-family: Helvetica;
     -webkit-font-smoothing: antialiased;
@@ -17,13 +22,20 @@ h2{
     padding: 30px 0;
 }
 
+.containerTables {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+}
+
 /* Table Styles */
 
 .tableWrapper{
     margin: 10px 70px 70px;
     box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .flTable {
