--- a/src/components/layout/sideBar/SideBar.module.css
+++ b/src/components/layout/sideBar/SideBar.module.css
@@ -1,45 +1,49 @@
 .Container {
-    width: 15rem;
-    height: 100vh;
-    background-color: #111111;
+  width: 250px;
+  height: 100vh;
+  background-color: #111111;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .newTask {
-    background-color: #3c8dbc;
-    padding: 0.75em;
-    color: white;
-    text-align: center;
-    font-weight: 500;
-    cursor: pointer;
+  background-color: #3c8dbc;
+  width: 250px;
+  padding: 0.75em;
+  color: white;
+  text-align: center;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 .menu {
-    padding: 0.75em;
-    color: white;
-    font-weight: 300;
+  padding: 0.75em;
+  color: white;
+  font-weight: 300;
 }
 
 .sideButton {
-    display: flex;
-    align-items: center;
-    background-color: #1e282c;
-    color: white;
-    padding: 0.75em;
-    gap: 8px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  background-color: #1e282c;
+  color: white;
+  padding: 0.75em;
+  gap: 8px;
+  cursor: pointer;
 }
 
-.sideButton:hover, .newTask:hover {
-    border: 1px solid white;
-    margin-right: 2px;
+.sideButton:hover,
+.newTask:hover {
+  border: 1px solid white;
+  margin-right: 2px;
 }
 
 .containerAcordeon p {
-display: flex;
-gap: 8px;
+  display: flex;
+  gap: 8px;
 }
 
 .containerAcordeon p:hover {
-    width: 100%;
-    border-bottom: 1px solid white;
+  width: 100%;
+  border-bottom: 1px solid white;
 }
