--- a/src/pages/cadEmpresa/CadTable.module.css
+++ b/src/pages/cadEmpresa/CadTable.module.css
@@ -19,11 +19,17 @@ h2{
 
 /* Table Styles */
 
+.containerTable {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .tableWrapper{
     margin: 10vh 70px 70px;
     box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .flTable {
