--- a/src/pages/cadUsuario/CadTable.module.css
+++ b/src/pages/cadUsuario/CadTable.module.css
@@ -23,7 +23,7 @@ h2{
     margin: 10vh 70px 70px;
     box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .flTable {
