--- a/src/pages/cadUsuario/CadTable.module.css
+++ b/src/pages/cadUsuario/CadTable.module.css
@@ -26,6 +26,12 @@ h2{
     height: auto;
 }
 
+.qtd {
+    display: flex;
+    width: 100%;
+    gap: 10px;
+}
+
 .flTable {
     border-radius: 5px;
     font-size: 12px;
