--- a/src/pages/tasks/GetTask.module.css
+++ b/src/pages/tasks/GetTask.module.css
@@ -6,6 +6,8 @@
 
 .main {
     display: flex;
+    width: 100%;
+    height: auto;
 }
 
 body{
@@ -27,54 +29,24 @@ h2{
     justify-content: center;
     align-items: start;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 /* Table Styles */
 
 .tableWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
     margin: 10px 70px 70px;
     box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
     width: 100%;
     height: auto;
 }
 
-.flTable {
-    border-radius: 5px;
-    font-size: 12px;
-    font-weight: normal;
-    border: none;
-    border-collapse: collapse;
-    width: 100%;
-    max-width: 100%;
-    white-space: nowrap;
-    background-color: white;
-}
 
-.flTable td, .flTable th {
-    text-align: center;
-    padding: 8px;
-}
-
-.flTable td {
-    border-right: 1px solid #f8f8f8;
-    font-size: 12px;
-}
-
-.flTable thead th {
-    color: #ffffff;
-    background: #4FC3A1;
-}
-
-
-.flTable thead th:nth-child(odd) {
-    color: #ffffff;
-    background: #324960;
-}
-
-.flTable tr:nth-child(even) {
-    background: #F8F8F8;
-}
 
 .btn {
     border: none;
@@ -97,6 +69,10 @@ h2{
 
 .deleteButton:hover {
     background: rgb(153, 47, 35);
+}
+
+.pagination {
+    width: 100%;
 }
 
 /* Responsive */
